# xgm

./: .gitignore  pyproject.toml  test
src/xgm/: __init__.py  __main__.py  __version__.py  baogao.py  bbmx.py  bkbg.py  bug.py  load.py  loader  query  qxzb.py  report.py  restore.py  show.py  update.py  util.py  xmjh.py  xq.py
src/xgm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/xgm/loader/: bb_fgb.toml  bb_jydzb.toml  bb_xmryb.toml  bb_ystm.toml  jh_bbap.toml  jh_kfjh.toml  jh_xjdzb.toml  jh_xjjy.toml  jh_xmjh.toml  jh_xmjh2.toml  kfjh.toml  qx_qxzb.toml  wt_wtgzb.toml
src/xgm/query/: db.sql  kaifajihua.sql  touchan.sql  update_kfjh_ytc.sql  update_kfjhsj.sql  update_kfjihua.sql  update_tcjy.sql  update_xmjh.sql  update_xmjh_xjy.sql  update_xmjh_ytc.sql  update_ysrq.sql  update_yxjjy.sql
src/xgm/sql/: kfjh.sql
src/xgm/tables/: bb_fgb.toml  bb_kjtj.toml  bb_qxzb.toml  bb_qxzbry.toml  bb_xjdzb.toml  bb_xmryb.toml  bb_ystm.toml  bb_ywrytj.toml  bb_ywtj.toml  jh_bbap.toml  jh_gbmtj.toml  jh_gzxkfjh.toml  jh_gzxtj.toml  jh_kfjhb.toml  jh_kfjhhztj.toml  jh_kfjhtj.toml  jh_tcjyb.toml  jh_xjfx.toml  jh_xjjy.toml  jh_xjytj.toml  jh_xmjhb.toml  jh_ywtj.toml
src/xgm/toml/: a.toml
